--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+*{
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+.App{
+  width: 100%;
+  min-width: 100vh;
+  background-color: #1c273a;
+  position: absolute;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+h1{
+text-transform: uppercase;
+letter-spacing: 3px;
+color: wheat;
+margin: 20px 0;
 }
+.photos{
+  width: 100%;
+  max-width:900px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px auto;
+overflow: hidden;
+border:2px solid #ddd;
+padding: 10px;
+border-radius: 5px;
+animation: scale 0.5s linear;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+@keyframes scale{
+  from{transform: scale(0.5);}
+}
+.photos img{
+  width: 100%;
+  display: block;
+  max-width: 150px;
+  height: 100%;
+  object-fit: cover;
+  
+}
+.photos p{
+  text-transform: capitalize;
+  letter-spacing: 2px;
+}
+.photos span{
+  color: chocolate;
+  margin: 0 10px;
+}
+.lo{
+  color: green;
+  align-items: center;
+  text-align: center;
+}
+button{
+  padding: 5px 20px;
+  margin: 10px;
+  cursor: pointer;
 }
